--- a/smithery.yaml
+++ b/smithery.yaml
@@ -4,9 +4,43 @@ startCommand:
   type: stdio
   configSchema:
     # JSON Schema defining the configuration options for the MCP.
-    {}
+    type: object
+    properties:
+      client:
+        type: string
+        enum: ["default", "cursor"]
+        description: "The client type to use."
+        default: "default"
+      remote:
+        type: boolean
+        description: "Whether to run in remote mode with HTTP server."
+        default: false
+      port:
+        type: integer
+        description: "Port to use for remote HTTP server."
+        default: 3000
+      apiKey:
+        type: string
+        description: "Optional API key for securing remote access."
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
-    (config) => ({ command: 'bun', args: ['run', 'index.ts'] })
-  exampleConfig: {}
+    (config) => ({ 
+      command: 'bun', 
+      args: [
+        'run', 
+        'index.ts', 
+        `--client=${config?.client || 'default'}`,
+        ...(config?.remote ? ['--remote', `--port=${config?.port || 3000}`] : []),
+        ...(config?.apiKey ? [`--api-key=${config.apiKey}`] : [])
+      ],
+      env: {
+        ...process.env,
+        SMITHERY_ENV: 'true',
+        ...(config?.apiKey ? { MCP_API_KEY: config.apiKey } : {})
+      }
+    })
+  exampleConfig: 
+    client: "default"
+    remote: false
+    port: 3000
